<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/report_background">

    <TextView
        android:id="@+id/tvCaptainMemberMessagesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="22dp"
        android:text="@string/captain_member_messages_title"
        android:textColor="@color/report_text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCaptainMemberMessagesSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:text="@string/captain_member_messages_subtitle"
        android:textColor="@color/report_location_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCaptainMemberMessagesTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCaptainMemberMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:paddingBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCaptainMemberMessagesSubtitle" />

    <TextView
        android:id="@+id/tvCaptainMemberMessagesEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/captain_member_messages_empty"
        android:textColor="@color/report_location_text"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvCaptainMemberMessages"
        app:layout_constraintEnd_toEndOf="@id/rvCaptainMemberMessages"
        app:layout_constraintStart_toStartOf="@id/rvCaptainMemberMessages"
        app:layout_constraintTop_toTopOf="@id/rvCaptainMemberMessages" />

</androidx.constraintlayout.widget.ConstraintLayout>
